syntax = "proto3";

option go_package = "stock/pb";

import "google/api/annotations.proto";

service OHLC {
  rpc Feed (FeedRequest) returns (FeedResponse) {
    option (google.api.http) = {
      post: "/v1/feed-data"
      body: "*"
    };
  }

  rpc GetStockList (GetStockListRequest) returns (GetStockListResponse) {
    option (google.api.http) = {
      get: "/v1/stock-list"
    };
  }

  rpc GetStockSummary (GetStockSummaryRequest) returns (GetStockSummaryResponse) {
    option (google.api.http) = {
      get: "/v1/stock-summary"
    };
  }

  rpc GetFeederStatus (GetFeederStatusRequest) returns (GetFeederStatusResponse) {
    option (google.api.http) = {
      get: "/v1/feeder-status"
    };
  }
}

message FeedRequest {}

message FeedResponse {}

message GetStockListRequest {}

message StockList {
  string stock = 1;
  string day_date = 2;
}

message GetStockListResponse {
  repeated StockList list = 1;
}

message GetStockSummaryRequest {
  string stock = 1;
  string day_date = 2;
}

message GetStockSummaryResponse {
  string previous_price = 1;
  string open_price = 2;
  string highest_price = 3;
  string lowest_price = 4;
  string close_price = 5;
  string average_price = 6;
  string volume = 7;
  string value = 8;
}

message GetFeederStatusRequest {}

message GetFeederStatusResponse {
  string status = 1;
}
